force-app/main/default/objects/SPEN_ResourceDetail__c/SPEN_ResourceDetail__c.object-meta.xml
<CustomObject>
    <description>Resource Detail object has been set up to use for resource Incident case API</description>
    <label>Resource Detail</label>
    <nameField>
        <label>Resource Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>