force-app/main/default/objects/SPEN_ResourceDetail__c/fields/SPEN_Comment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>