force-app/main/default/objects/SPEN_ResourceDetail__c/fields/SPEN_Company__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Company__c</fullName>
    <label>Company</label>
    <type>TextArea</type>
</CustomField>