force-app/main/default/objects/SPEN_ResourceDetail__c/fields/SPEN_Event__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrival On Site</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>