force-app/main/default/objects/SPEN_ResourceDetail__c/fields/SPEN_EventDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EventDate__c</fullName>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>