force-app/main/default/objects/SPEN_ResourceDetail__c/fields/SPEN_Incident__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Incident__c</fullName>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Resource Details</relationshipLabel>
    <relationshipName>Resource_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>