force-app/main/default/objects/SPEN_ResourceDetail__c/fields/SPEN_ResourceName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResourceName__c</fullName>
    <label>Resource Name</label>
    <type>TextArea</type>
</CustomField>